[gd_scene load_steps=8 format=3 uid="uid://bs8fnx6o2q68o"]

[ext_resource type="Script" path="res://options_menu.gd" id="1_t1lix"]
[ext_resource type="AudioStream" uid="uid://b1lxwpsu0mucr" path="res://hover.ogg" id="2_t1lix"]
[ext_resource type="AudioStream" uid="uid://80xbnttq2o0c" path="res://hitman-chosiccom_9bfeU9RT.ogg" id="3_4gmlt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1lix"]
bg_color = Color(0.85098, 0.709804, 0.423529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4gmlt"]
bg_color = Color(1, 0.8, 0.533333, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogda5"]
bg_color = Color(0.431373, 0.172549, 0.172549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85098, 0.709804, 0.423529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lbr8e"]
bg_color = Color(0.431373, 0.172549, 0.172549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.85098, 0.709804, 0.423529, 1)

[node name="options_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t1lix")
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.105882, 0.0588235, 1)
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 19
text = "Music Volume
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_t1lix")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_4gmlt")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Sound Effects"

[node name="SFXToggle" type="CheckBox" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ogda5")
text = "Enable Sound Effects"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_lbr8e")
text = "Back"

[node name="hover" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_t1lix")

[node name="Mainmenumusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_4gmlt")
parameters/looping = true

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/SFXToggle" to="." method="_on_sfx_toggle_mouse_entered"]
[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_mouse_entered"]
